--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
     <head>
-        <title>ウェブページのタイトル</title>
+        <title>阿部寛のホームページ</title>
         <link rel="stylesheet" type="text/css" href="./index.css">
     </head>
     <body>
-        <h1>ウェブページの見出し</h1>
-        <p id="bar" class="foo">ウェブページを作成しました！</p>
+        <div id="menu">
+            <iframe src="./menu.html" name="menuwindow" frameborder = "0"></iframe>
+        </div>
+        <div id="main">
+            <iframe src="./top.html" name="mainwindow" frameborder = "0"></iframe>
+        </div>
     </body>
 </html>
